Công thức nấu món ăn

--- a/index.html
+++ b/index.html
@@ -2,28 +2,32 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Trang wed</title>
+    <title>Lists</title>
 </head>
-<body bgcolor="#ffe4c4">
-    <h1>Trang Wed</h1>
-    <h2>Những con thú:</h2>
-    <ul style="list-style-type: square">
-        <li>Hổ</li>
-        <li>Báo</li>
-        <li>Sư Tử</li>
-        <li>Sói</li>
-        <li>Cá Sấu</li>
+<body>
+    <h1>KimBap Hàn Quốc</h1>
+    <p>"Kimbap là món ăn truyền thống của xứ sở Kim Chi. Cái tên này được biết đến nghĩa Việt là cơm cuộn rong biển.
+        Khi ăn sẽ được cắt thành từng khoanh vừa ăn trông rất bắt mắt."</p>
+    <img height="250" src="https://media.cooky.vn/recipe/g2/14188/s640/recipe14188-635920198105604401.jpg">
+    <h2>Nguyên Liệu:</h2>
+    <ul>
+        <li>Gạo: 125gr</li>
+        <li>Rong Biển: 4 lá</li>
+        <li>Dưa Leo: 2 quả</li>
+        <li>Cà Rốt: 1 củ</li>
+        <li>Xúc Xích: 5 cây</li>
+        <li>Trứng Gà: 3 quả</li>
+        <li>Nước Mắm</li>
+        <li>Hạt Nêm</li>
+        <li>Hành Lá: 3 nhánh</li>
+        <li>Tương ớt</li>
+        <li>Sốt Mayonnaise</li>
     </ul>
-    <h2>Những Ngày Trong Tuần:</h2>
+    <h2>Công Thức:</h2>
     <ol>
-        <li>Thứ hai</li>
-        <li>Thứ ba</li>
-        <li>Thứ tư</li>
-        <li>Thứ năm</li>
-        <li>Thứ sáu</li>
-        <li>Thứ bảy</li>
-        <li>Chủ Nhật</li>
+        <li>Sơ chế nguyên liệu</li>
+        <li>Nấu cơm và chiên trứng</li>
+        <li>Cuộn kimbap</li>
     </ol>
-
 </body>
 </html>
